Segunda aula imersão React Alura

--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,16 @@
   body {
 	margin: 0;
 	padding: 0;
-	background-color: #121212;
+	
   }
   
   a {
 	color: inherit;
   } 
+
+  #root{
+	  min-height: calc(100vh - var(--bodyPaddingTop));
+	  background: #121212;
+	  display: flex;
+	  flex-direction: column;
+  }
