--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 72px;
   z-index: 100;
-  border-bottom: 2px solid var(--primary);
+  border-bottom: 2px solid var(--white);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,7 +23,7 @@
   padding-left: 5%;
   padding-right: 5%;
 
-  background-color:#2E2E2E;
+  background-color:#121212;
   
 }
 body {
