--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 72px;
   z-index: 100;
-  border-bottom: 2px solid var(--white);
+  border-bottom: 2px solid var(--primary);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,10 +20,10 @@
   top: 0;
   left: 0;
   right: 0;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 24px;
+  padding-right: 24px;
 
-  background-color:#121212;
+  background-color:#212121;
   
 }
 body {
