--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,103 @@
 	--frontEnd: #1fc6f9;
 	--backEnd: #1ff952;
   }
-  
-  html,
-  body {
+  html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+	color:white;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
 	
-  }
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+/*Fontes*/
+.h2, .h3, .h4, .h5, .h6, .subTitle1, .subTitle2 {
+	font-family: 'Open Sans', sans-serif; }
   
-  a {
-	color: inherit;
-  } 
+  .h3, .h4, .h5, .sub1, .body1 {
+	font-weight: 400; }
+  
+  .h6, .subTitle2, .btn {
+	font-weight: 500; }
+  
+  .h2 {
+	font-weight: 300;
+	font-size: 60px;
+	letter-spacing: -0.5px; }
+  
+  .h3 {
+	font-size: 48px;
+	letter-spacing: 0px; }
+  
+  .h4 {
+	font-size: 33px;
+	letter-spacing: 0.25px; }
+  
+  .h5 {
+	font-size: 23px;
+	letter-spacing: 0px; }
+  
+  .h6 {
+	font-size: 19px;
+	letter-spacing: 0.15px; }
+  
+  .subTitle1 {
+	font-size: 15px;
+	letter-spacing: 0.15px; }
+  
+  .subTitle2 {
+	font-size: 13px;
+	letter-spacing: 0.1px; }
+  
+  .body1, .btn {
+	font-family: 'Roboto', sans-serif; }
+  
+  .body1 {
+	font-size: 16px;
+	letter-spacing: 0.5px; }
+  
+  .btn {
+	font-size: 14px;
+	letter-spacing: 1.25px;
+	text-transform: uppercase; }
 
   #root{
 	  min-height: calc(100vh - var(--bodyPaddingTop));
@@ -31,3 +117,4 @@
 	  display: flex;
 	  flex-direction: column;
   }
+
